--- a/package.json
+++ b/package.json
@@ -73,12 +73,15 @@
 		]
 	},
 	"dependencies": {
+		"appwrite": "^16.0.2",
 		"bootstrap": "^5.3.3",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.10.5",
 		"react-dom": "^16.8.4",
+		"react-icons": "^5.3.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
-	}
+	},
+	"proxy": "https://cloud.appwrite.io"
 }
