Register y Login conectados entre las db

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"appwrite": "^16.0.2",
 		"bootstrap": "^5.3.3",
 		"cors": "^2.8.5",
+		"http-proxy-middleware": "^3.0.3",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.10.5",
