--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"react-bootstrap": "^2.10.5",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"use-debounce": "^10.0.4"
 	}
 }
