--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ DEBUG=TRUE
 # Front-End Variables
 BASENAME=/
 #BACKEND_URL=
+
+#APPWRITE VARIABLES
+
+PROYECT_ID=6734ed790022754511c0
+DATABASE_ID=673b6fc7000653bf3a0c
+COLLECTION_ID_MESSAGES=673b6fdc00155ae851da
