--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # 1. In the back end code you access the variable by importing os and then typing print(os.getenv('VARIABLE_NAME'))
 
 # Back-End Variables
-DATABASE_URL=postgres://gitpod:postgres@localhost:5432/example
+DATABASE_URL=postgresql://tapnews:Gq0sznhJPvXSsEpukRvk5XhWnMi79tGg@dpg-csts4fggph6c73ababng-a/tapnews_db
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
 FLASK_DEBUG=1
