--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free-regular": "^5.0.13",
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
