--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.4
 Mako==1.3.6
 MarkupSafe==3.0.2
 packaging==24.1
+pip==24.3.1
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.0.1
