--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DEBUG=TRUE
 
 # Front-End Variables
 BASENAME=/
-#BACKEND_URL=
+BACKEND_URL=https://sp78-final-project-tapnews.onrender.com
 
 #APPWRITE VARIABLES
 
