Changed debug options in .env

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@
 DATABASE_URL=postgresql://tapnews:Gq0sznhJPvXSsEpukRvk5XhWnMi79tGg@dpg-csts4fggph6c73ababng-a.frankfurt-postgres.render.com/tapnews_db
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
-FLASK_DEBUG=1
-DEBUG=TRUE
+FLASK_DEBUG=0
+DEBUG=false
 
 # Front-End Variables
 BASENAME=/
