Botón y algún cambio de CSS y componente renderizado

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,4 @@ BACKEND_URL=https://sp78-final-project-tapnews.onrender.com
 PROYECT_ID=6734ed790022754511c0
 DATABASE_ID=673b6fc7000653bf3a0c
 COLLECTION_ID_MESSAGES=673b6fdc00155ae851da
+STORAGE_ID=673df59f001c259b8253
