Función de compartir en su modal, preescribe url en el input del chat

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ PROYECT_ID=6734ed790022754511c0
 DATABASE_ID=673b6fc7000653bf3a0c
 COLLECTION_ID_MESSAGES=673b6fdc00155ae851da
 STORAGE_ID=673df59f001c259b8253
+
+API_TOKEN=1Mp7zYl33S4fRzsk4TaEVSb1NXxq6pkVyxSHhqH0
+DOMAIN_API=https://api.thenewsapi.com/v1/news
